# FDP-Cpp-API

./: .gitignore  CMakeLists.txt  README.md  annotated.html  api_8hxx_source.html  api__object_8hxx_source.html  class_data_pipeline_impl__.html  class_f_d_p_1_1_a_p_i-members.html  class_f_d_p_1_1_a_p_i.html  class_f_d_p_1_1_api_object-members.html  class_f_d_p_1_1_api_object.html  class_f_d_p_1_1_config-members.html  class_f_d_p_1_1_config.html  class_f_d_p_1_1_data_pipeline-members.html  class_f_d_p_1_1_data_pipeline.html  class_f_d_p_1_1_data_pipeline_impl__-members.html  class_f_d_p_1_1_data_pipeline_impl__.html  class_f_d_p_1_1_i_o_object-members.html  class_f_d_p_1_1_i_o_object.html  class_fair_data_pipeline_1_1_a_p_i-members.html  class_fair_data_pipeline_1_1_a_p_i.html  class_fair_data_pipeline_1_1_api_object-members.html  class_fair_data_pipeline_1_1_api_object.html  class_fair_data_pipeline_1_1_config-members.html  class_fair_data_pipeline_1_1_config.html  class_fair_data_pipeline_1_1_data_pipeline-members.html  class_fair_data_pipeline_1_1_data_pipeline.html  class_fair_data_pipeline_1_1_data_pipeline_1_1impl-members.html  class_fair_data_pipeline_1_1_data_pipeline_1_1impl.html  class_fair_data_pipeline_1_1_distribution-members.html  class_fair_data_pipeline_1_1_distribution.html  class_fair_data_pipeline_1_1_i_o_object-members.html  class_fair_data_pipeline_1_1_i_o_object.html  class_fair_data_pipeline_1_1_versioning_1_1version-members.html  class_fair_data_pipeline_1_1_versioning_1_1version.html  class_fair_data_pipeline_1_1config__parsing__error.html  class_fair_data_pipeline_1_1json__parse__error.html  class_fair_data_pipeline_1_1logger-members.html  class_fair_data_pipeline_1_1logger.html  class_fair_data_pipeline_1_1logging_1_1_composite_sink-members.html  (+62 more)
.github/workflows/: docs.yaml  fdp_cpp_api.yaml  test_with_simple_model.yaml
cmake/: boost_regex.cmake  jsoncpp.cmake  toml11.cmake  yaml_cpp.cmake
cmake_modules/: fdpapiConfig.cmake.in  fdpapi_add_external.cmake
include/fdp/: exceptions.hxx  fdp.h  fdp.hxx
include/fdp/objects/: config.hxx  distribution.hxx  metadata.hxx
include/fdp/registry/: api.hxx
include/fdp/utilities/: data_io.hxx  logging.hxx  semver.hxx
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  classes_2.js  classes_3.js  classes_a.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  fdp.cxx  fdp_c_api.cxx
src/objects/: config.cxx  distribution.cxx  metadata.cxx
src/registry/: api.cxx
src/utilities/: data_io.cxx  logging.cxx
test/: CMakeLists.txt  test_c_api.cxx  test_io.cxx  test_registry.cxx
test/data/: read_csv.yaml  write_csv.yaml
